Fixed minor whitespace wordwrap bug

--- a/src/zapfmaster2000-service/src/main/webapp/v2/css/style.css
+++ b/src/zapfmaster2000-service/src/main/webapp/v2/css/style.css
@@ -854,6 +854,7 @@ li.zm-newsstack {
 } */
 .zm-newsstack .brand {
     height: 50px;
+    white-space: normal;
 }
 
 .zm-newsstack .zm-backgrnd {
